<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".LoginPage">

    <TextView
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        ></TextView>

    <TextView
        android:text="Log in to access your dashboard and activities."
        android:textColor="@color/grey_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        ></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text"
        app:boxBackgroundMode="none"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/email"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text"
        app:boxBackgroundMode="none">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_marginTop="20dp"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ProgressBar>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"
        android:background="@drawable/black_border"
        android:layout_marginBottom="10dp"></Button>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/registerNow"
        android:text="@string/register_now"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>
</LinearLayout>